@@ -1,3 +1,14 @@
+2001-03-16  David Welch  <welch@cwcom.net>
+
+	* ntoskrnl/include/internal/mm.h: Removed MmSafeCopyToUser and
+	MmSafeCopyFromUser as source files need these but don't want internal 
+	mm definitions.
+	* ntoskrnl/nt/ntevent.c (NtCreateEvent, NtOpenEvent, NtPulseEvent,
+	NtQueryEvent, NtResetEvent, NtSetEvent): Copy data to and from
+	user mode safely.
+	* ntoskrnl/rtl/mem.c (MmCopyToCaller, MmCopyFromCaller): Helper
+	functions for copying data to and from potentially unsafe pointers.
+
 2000-12-23  David Welch  <welch@cwcom.net>
 
 	* All task switching is done in software.
